# identity-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  USAGE_GUIDE.md  deploying instructions.md  identity-service.postman_collection.json  pyproject.toml  reusable_auth_service_architecture.docx
app/: config.py  database.py  main.py  middleware.py
app/api/: admin.py  auth.py  dependencies.py
app/models/: auth.py  product.py  token.py  user.py
app/repositories/: memory_product_repo.py  memory_token_repo.py  memory_user_repo.py  mongo_product_repo.py  mongo_token_repo.py  mongo_user_repo.py  product_repository.py  token_repository.py  user_repo_factory.py  user_repository.py
app/services/: google_auth.py  password_service.py  token_service.py
tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_dependencies.py  test_email_verification.py  test_google_auth.py  test_health.py  test_integration.py  test_middleware.py  test_password_reset.py  test_password_service.py  test_product_model.py  test_product_repository.py  test_token_service.py  test_user_model.py  test_user_repository.py
